[0.4.0] feat(LocalLibrary) Genre Edit, Sliders thiner, Album Artwork Placeholder darker, Fix queue info & lot of visual issues